--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
-h1 {
-  font-family: 'Roboto', sans-serif;
+#title{
+  font-family: 'Playfair Display', serif;
+  text-transform: lowercase;
+  font-size: 60px;
 }
