--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,11 @@
   font-family: 'Playfair Display', serif;
   text-transform: lowercase;
   font-size: 60px;
+  font-weight:900;
+}
+.headings{
+
+}
+p{
+
 }
