--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,12 @@
   font-weight:900;
 }
 .headings{
-
+  font-family: 'Playfair Display', serif;
+  font-size: 40px;
+  font-weight: 400;
 }
 p{
-
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  font-weight: 400;
 }
