--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,9 @@
   font-family: 'Playfair Display', serif;
   font-size: 40px;
   font-weight: 400;
-  background-color: hsl(51, 100%, 70%)
+  background-color: hsl(51, 100%, 50%);
+  text-align: center;
+  color: #ffffff
 }
 p{
   font-family: 'Raleway', sans-serif;
@@ -16,5 +18,5 @@ p{
   font-weight: 400;
 }
 html{
-  background-color: hsl(5, 100%, 97%)
+  background-color: hsl(5, 100%, 98%);
 }
