--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
   text-transform: lowercase;
   font-size: 60px;
   font-weight:900;
+  color: hsl(186, 52%, 75%);
+  text-shadow: 10px 10px 0px #ffffff;
 }
 .headings{
   font-family: 'Playfair Display', serif;
@@ -10,7 +12,7 @@
   font-weight: 400;
   background-color: hsl(51, 100%, 50%);
   text-align: center;
-  color: #ffffff
+  color: #ffffff;
 }
 p{
   font-family: 'Raleway', sans-serif;
