--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
   background-color: hsl(51, 100%, 50%);
   text-align: center;
   color: #ffffff;
-  text-transform: uppercase;
+  text-transform: lowercase;
 }
 p{
   font-family: 'Raleway', sans-serif;
@@ -24,5 +24,5 @@ html{
   background-color: hsl(5, 100%, 95%);
 }
 a{
-  color: hsl(6, 100%, 85%);
+  color: hsl(6, 100%, 80%);
 }
