--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ p{
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
   font-weight: 400;
+  color: hsl(0, 0%, 25%);
 }
 html{
   background-color: hsl(5, 100%, 95%);
